Fixed bug with infinitely-stretched images on mobile devices.

--- a/src/styles/site.less
+++ b/src/styles/site.less
@@ -169,7 +169,7 @@ h2 {
 
 #portfolio ul.portfolio-items li .portfolio-item img {
     transition: filter 0.25s ease-in-out;
-    width: 100%;
+    max-width: 100%;
 }
 
 
@@ -270,7 +270,7 @@ h2 {
     }
 
     #portfolio ul.portfolio-items li .portfolio-item img {
-        height: 100%;
+        max-height: 100%;
         width: auto;
     }
 }
